--- a/index.html
+++ b/index.html
@@ -1,8 +1,29 @@
+<!DOCTYPE html>
 <html>
 <head>
-  
- <title> MON CV </title>
-  
+	<meta charset="UTF-8">
+	<title>MON CV TAHIR ZAKARIA</title>
 </head>
-<body>hello world zakarias</body>
+<body>
+<h1>TAHIR ZAKARIA</h1>
+<p>
+	<strong>Address:</strong> kabylie tizi ouzou<br>
+	<strong>Mail:</strong> zakariatahir723@gmail.com<br>
+	<strong>Phone:</strong> 0743242321
+</p>
+
+<h2>experiences</h2>
+<ol>
+	<li>etudiant a l EPSI</li>
+	<li><STr>stage en solideworks</STr></li>
+
+</ol>
+
+<h2>diplomes</h2>
+<ul>
+	<li>baccalaureat genie civil </li>
+	<li>Licence en science et thechnologies </li>
+</ul>
+
+</body>
 </html>
