--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <body>
 <h1>TAHIR ZAKARIA</h1>
 <p>
-	<strong>Address:</strong> kabylie tizi ouzou<br>
+	<strong>Address:</strong> kabylie,tizi ouzou<br>
 	<strong>Mail:</strong> zakariatahir723@gmail.com<br>
-	<strong>Phone:</strong> 0743242321
+	<strong>Phone:</strong> 07 43 24 23 21
 </p>
 
-<h2>experiences</h2>
+<h2>EXPERIENCES :</h2>
 <ol>
 	<li>etudiant a l EPSI</li>
 	<li><STr>stage en solideworks</STr></li>
@@ -20,9 +20,9 @@
 
 </ol>
 
-<h2>diplomes</h2>
+<h2>DIPLOMES :</h2>
 <ul>
-	<li>baccalaureat genie civil </li>
+	<li>baccalaureat en genie civil </li>
 	<li>Licence en science et thechnologies </li>
 </ul>
 
