--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<title>MON CV TAHIR ZAKARIA</title>
-</head>
-<body>
+<title>MON CV</title>
+</head>7
+<body>      
 <h1>TAHIR ZAKARIA</h1>
 <p>
-	<strong>Address:</strong> kabylie,tizi ouzou<br>
-	<strong>Mail:</strong> zakariatahir723@gmail.com<br>
-	<strong>Phone:</strong> 07 43 24 23 21
+<strong>address:</strong>   KABYLIE,tizi ouzou <br>
+<strong>mail:</strong>  zakariatahir723@gmail.com<br>
+<strong> phone:</strong>    0746532410<br>
+<--ici je mettrais mes experiences-->
 </p>
-
-<h2>EXPERIENCES :</h2>
+<h2>experiences :</h2>
 <ol>
-	<li>etudiant a l EPSI</li>
-	<li><STr>stage en solideworks</STr></li>
-	<li>stage a auchen</li>
-
+<li>delevopper,sncf,lille,FRANCE</li>
+<li>ingenieure en informatique,microsoft,USA</li>
+<--ici je mettrais mes diplomes-->
 </ol>
-
-<h2>DIPLOMES :</h2>
+<h2>stage et diplomes:</h2>
 <ul>
-	<li>baccalaureat en genie civil </li>
-	<li>Licence en science et thechnologies </li>
+<li>stage en entreprise ,devlopper IA</li>
+<li>baccalaureat en genie civil</li>
+
+
 </ul>
+
+
 
 </body>
 </html>
