--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <strong> phone:</strong>    0746532410<br>
 <--ici je mettrais mes experiences-->
 </p>
-<h2>experiences :</h2>
+<h2>EXPERIENCES :</h2>
 <ol>
-<li>delevopper,sncf,lille,FRANCE</li>
-<li>ingenieure en informatique,microsoft,USA</li>
-<--ici je mettrais mes diplomes-->
+<li>Developpeur web , EPSI</li>
+<li>ingenieure en informatique,microsoft</li>
+
 </ol>
-<h2>stage et diplomes:</h2>
+<h2>DIPLOMES:</h2>
 <ul>
-<li>stage en entreprise ,devlopper IA</li>
+<li>stage en entreprise , SNCF</li>
 <li>baccalaureat en genie civil</li>
 
 
